# machine-learning

./: .gitignore  notes.md  questions.md  reading-list.md
hello-compute/: .gitignore  Cargo.toml
hello-compute/src/: main.rs  mandelbrot.wgsl
myml/: Cargo.toml
myml/examples/: digit_vision.rs
myml/src/: array_util.rs  layers.rs  lib.rs  loss.rs  model.rs  traits.rs
myml/src/layers/: activation.rs  convolutions.rs  flatten.rs  input.rs  linear.rs  max_pool.rs  parallel.rs  sequence.rs  softmax.rs
myml/tests/: layers.rs
playground/: digit-vision.py  digit_vision.py  logistic-regression.py  mnist_mutate.py  my-cluster.py  myml.py  myml_test.py
playground/lets_add/: grokking.py  grokking_graph.py  tutorial.py  tutorial_dirty.py
playground/myml/: digit_vision.py  myml.py
playground/pre-myml/: dot.py  logistic-regression.py
word2vec/: corpus.py  play_with_words.py  play_with_words_rnn.py  word2vec.py  word2vec_rnn.py
word2vec-original/: demo-word.sh  word2vec.c
word3vec/: .gitignore  .plan  Cargo.toml
word3vec/script/: demo-word.sh  eval.sh
word3vec/src/: gpu.rs  lib.rs  main.rs
