[package]
name = "hello-compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
image = "0.24"
tokio = { version = "1.32", features = ["full"] }

[dependencies.wgpu]
git = "https://github.com/jimblandy/wgpu"
branch = "const-expressions-2"
