[package]
name = "myml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
rand = "0.8"
rayon = "1.7"

[dev-dependencies]
mnist = "0.5"

[profile.release]
debug = true
