[package]
name = "word3vec"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned_box = "0.2"
anyhow = "1.0"
bincode = "1.3"
bytemuck = "1.13"
clap = {version = "4.3", features = ["derive"]}
encase = "0.6"
indicatif = "0.17"
ordered-float = "3.7"
serde = {version = "1.0", features = ["derive"]}

[dependencies.wgpu]
#version = "0.17"
git = "https://github.com/gfx-rs/wgpu.git"
branch = "trunk"
